# orc-format

./: .gitignore  Cargo.toml  LICENSE  build.rs
.github/workflows/: rust.yml
src/: codecs.rs  errors.rs  lib.rs  nibble.rs  orc.proto  python.rs  sample.orc  schemata.rs  toc.rs
src/tests/: codecs.rs  mod.rs  test_python_binding.py
src/tests/examples/expected/: metadata.raw
