[package]
name = "orc-format"
version = "0.1.0"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
thiserror = "1.0"
flate2 = "1.0.14"
snap = "1"
maplit = "1.0.2"
hex-literal = "0.2.1"
num-traits = "0.2.11"

[build-dependencies]
prost-build = "0.6"
