[package]
name = "orc-format"
version = "0.1.0"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
edition = "2018"

[lib]
name = "orc_format"
crate-type = ["lib", "cdylib"]

[features]
default = ["python"]
python = ["pyo3", "numpy"]


[dependencies]
prost = "0.6"
thiserror = "1.0"
flate2 = "1.0"
snap = "1"
maplit = "1.0"
hex-literal = "0.2"
num-traits = "0.2"
bytes = "0.5"
serde_json = "1.0.57"
ndarray = "0.13.1"

[build-dependencies]
prost-build = "0.6"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
optional = true 

[dependencies.numpy]
version = "0.12.1"
optional = true 

[package.metadata.maturin]
requires-dist = ["numpy >= 0.13.0", "pandas >= 1.0.0"]